# PostTgBot

./: Bot.py  Dockerfile  README.MD  README.md  config.ini  init.py  pyproject.toml  sample.json  secrets.json  utils.py
.github/workflows/: python-app.yml
bot/: __main__.py
bot/commands/: __init__.py  start.py
bot/handlers/: __init__.py  add_post.py  bot_commands.py
bot/structures/: fsm_groups.py  get_chat_administrator_rights.py
bot/structures/keyboards/: add_post_keyboard.py
handlers/: add_post.py  client.py
local/: en.json  ru.json
locales/: mybot.pot
locales/en/LC_MESSAGES/: mybot.mo  mybot.po
locales/ru/LC_MESSAGES/: mybot.mo  mybot.po
