[tool.poetry]
name = "postbot"
version = "0.1.0"
description = ""
authors = ["Zeusina <kachusov_k@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
