[tool.poetry]
name = "bot"
version = "0.2.0"
description = ""
authors = ["Zeusina <kachusov_k@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[package]
packages = [
    { include = "bot"}
]